--- a/style.css
+++ b/style.css
@@ -379,3 +379,28 @@ main.foto7 img{
     display: block;
     border-radius: 10px;
 }
+
+main.foto8{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    background-color: rgb(224, 224, 128);
+    width: auto;
+    max-width: 1080px;
+    margin: 18px auto 0 auto;
+    header{
+        background-color: #ffffff;
+        width:200px;
+        text-decoration: wavy;
+        color:rgb(196, 188, 100)
+    }
+}
+
+main.foto8 img{
+    max-width: 320px;
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+}
