--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@ main.foto8{
     flex-direction: column;
     align-items: center;
     height: auto;
-    background-color: rgb(224, 224, 128);
+    background-color: rgb(255, 243, 131);
     width: auto;
     max-width: 1080px;
     margin: 18px auto 0 auto;
@@ -446,7 +446,7 @@ main.foto8{
         background-color: #ffffff;
         width:200px;
         text-decoration: wavy;
-        color:rgb(196, 188, 100)
+        color:#ecd824
     }
 }
 
